--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3D Flower, CSS + JS</title>
+  <title>OJITOS LINDOS</title>
   <link rel="stylesheet" href="https://public.codepenassets.com/css/reset-2.0.min.css">
 <link rel="stylesheet" href="css/style.css">
 
@@ -28,3 +28,4 @@
 
 </body>
 </html>
+
